[tool.poetry]
name = "suumo"
version = "0.1.0"
description = ""
authors = ["TakamasaSanda <turn.adnas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
retry = "^0.9.2"
numpy = "^2.2.0"
slackweb = "^1.0.5"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
